--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
         <style>
             #title {
                 text-align: center;
+                margin-bottom: 5rem;
             }
             body {
-                padding-inline: 5%;
-                padding-top: 2%;
+                padding-inline: 15%;
+                padding-top: 5%;
                 justify-content: center;
                 font-family: 'Courier New', Courier, monospace;
                 background-color: #abcdef;
                 font-size: x-large;
             }
-            header {
-                margin-bottom: 5rem;
-            }
-            a:visited {
-                color: #aaaaaa;
+            h2 {
+                text-decoration: underline;
             }
             a {
                 color: #000000;
+            }
+            a:visited {
+                color: #aaaaaa;
             }
             a:hover {
                 text-decoration: none;
