--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 bottom: 0;
             }
         </style>
+        <base target="_blank"/>
     </head>
     <body>
         <h1 id="title">josh pahman's website</h1>
@@ -42,7 +43,7 @@
         <p>
             Hey, welcome to my little corner of the internet. It doesn't look like much, but it loads practically instantly and should work properly on pretty much any system that supports HTTP.
             <br/><br/>
-            I'll probably add more here when I feel like it. For now, feel free to check out my <a href="https://github.com/jpahm" target="_blank">Github</a> or <a href="https://www.linkedin.com/in/jpahm/">LinkedIn</a>.
+            I'll probably add more here when I feel like it. For now, feel free to check out my <a href="https://github.com/jpahm">Github</a> or <a href="https://www.linkedin.com/in/jpahm/">LinkedIn</a>.
         </p>
         <script>
             // Do the silly title thing
