--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <div id="terminal">
             <textarea id="prefix" readonly></textarea><textarea id="terminal-input" autocomplete="off" autocapitalize="none" autocorrect="off" spellcheck="false" autofocus></textarea>
         </div>
-        <script src="./terminal.js"></script>
+        <script type="module" src="./terminal.js"></script>
     </body>
 </html>
