Substitution improvements, minor tweaks

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div id="terminal">
-            <textarea id="prefix" readonly></textarea><textarea id="terminal-input" autocomplete="off" autocapitalize="none" autocorrect="off" spellcheck="false" autofocus></textarea>
+            <textarea id="prefix" readonly></textarea><textarea id="terminal-input" autocomplete="off" autocapitalize="none" autocorrect="off" spellcheck="false" autofocus placeholder="Run 'help' to see command list..."></textarea>
         </div>
         <script type="module" src="./terminal.js"></script>
     </body>
